Fix modal spacing

--- a/src/scss/components/modal/__buttons.scss
+++ b/src/scss/components/modal/__buttons.scss
@@ -4,10 +4,11 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  margin-bottom: -1rem;
 }
 
-.modal__buttons > .button:first-child {
-  margin-top: 1em;
+.modal__buttons .button:last-child {
+  margin-bottom: 1rem;
 }
 
 @include b.breakpoint-up("sm") {
